--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,6 +28,13 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+    - name: Download and Install Gradle
+      run: |
+        wget -q https://services.gradle.org/distributions/gradle-7.2-bin.zip
+        unzip -q gradle-7.2-bin.zip
+        export GRADLE_HOME=$GITHUB_WORKSPACE/gradle-7.2
+        export PATH=$GRADLE_HOME/bin:$PATH
+      shell: bash    
     - name: Build with Gradle
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
