--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,4 +26,12 @@ jobs:
           chmod +x ./gradlew
           ./gradlew build
 
-     
+      - name: Build and push Docker image
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+        run: |
+          docker buildx create --use
+          docker buildx build --file Dockerfile --tag yourusername/helloworld:latest .
+          echo $DOCKERHUB_TOKEN | docker login -u $DOCKERHUB_USERNAME --password-stdin
+          docker push yourusername/helloworld:latest
