--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
         with:
-          distribution: 'default' 
+          distribution: 'ubuntu' 
 
       - name: Set up Java
         uses: actions/setup-java@v2
