--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,8 +8,12 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
       - name: Checkout code
         uses: actions/checkout@v2
 
