--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,33 +8,18 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    steps:
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
 
+    steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Set up Java
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-
-      - name: Build Java application with Gradle
-        run: |
-          chmod +x ./gradlew
-          ./gradlew build
+        uses: docker/setup-buildx-action@v1
 
       - name: Build and push Docker image
         env:
-          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKER_PASSWORD }}
         run: |
           docker buildx create --use
           docker buildx build --file Dockerfile --tag rishabhverma99/my-pipeline-project:latest .
