--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,5 @@
+# This workflow will build a Java project with Gradle without relying on the Gradle wrapper properties file.
+
 name: Java CI with Gradle
 
 on:
@@ -13,23 +15,26 @@ permissions:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
-      - name: Build and Push Docker Image
-        uses: mr-smithers-excellent/docker-build-push@v5
-        with:
-          image: rishabhverma99/my-pipeline-project
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+
+    - name: Download and Install Gradle
+      run: |
+        wget -q https://services.gradle.org/distributions/gradle-7.2-bin.zip
+        unzip -q gradle-7.2-bin.zip
+        export GRADLE_HOME=$GITHUB_WORKSPACE/gradle-7.2
+        export PATH=$GRADLE_HOME/bin:$PATH
+      shell: bash
+
+    - name: Build with Gradle
+      run: gradle build
