--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,38 @@
-# This workflow will build a Java project with Gradle without relying on the Gradle wrapper properties file.
-
-name: Java CI with Gradle
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
-
-permissions:
-  contents: read
 
 jobs:
-  build:
-
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Download and Install Gradle
-      run: |
-        wget -q https://services.gradle.org/distributions/gradle-7.2-bin.zip
-        unzip -q gradle-7.2-bin.zip
-        export GRADLE_HOME=$GITHUB_WORKSPACE/gradle-7.2
-        export PATH=$GRADLE_HOME/bin:$PATH
-      shell: bash
+      - name: Set up Java
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'temurin'
 
-    - name: Build with Gradle
-      run: gradle build
+      - name: Build Java application with Gradle
+        run: |
+          chmod +x ./gradlew
+          ./gradlew build
+
+      - name: Build and push Docker image
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          docker buildx create --use
+          docker buildx build --file Dockerfile --tag rishabhverma99/helloworld:latest .
+          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+          docker push rishabhverma99/helloworld:latest
